--- a/node/public/index.html
+++ b/node/public/index.html
@@ -10,7 +10,7 @@
         
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css">
-
+<script data-ad-client="ca-pub-9497253845069586" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
 
   <body>
