--- a/node/public/index.html
+++ b/node/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Butternotes | Home</title>
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <link rel="icon" href="<%= BASE_URL %>icon/clef.png">
-        
+
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css">
 <script data-ad-client="ca-pub-9497253845069586" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -15,8 +15,6 @@
 
   <body>
     <div id="app"></div>
-    
+
   </body>
 </html>
-
-
