--- a/html/on-programming/cof-two.html
+++ b/html/on-programming/cof-two.html
@@ -219,7 +219,7 @@ makeScale('F', minor())
         <li>Each new key is the fifth of the prior key: E is the fifth of A and B is the fifth of G.</li>
       </ul>
       <p>And continuing on, we get the Circle of Fifths in all its glory:</p>
-      <img src="https://items.sfo2.cdn.digitaloceanspaces.com/cof-02/circleOfFifths.png">
+      <img src="https://items.sfo2.cdn.digitaloceanspaces.com/cof-02/circle-of-fifths.svg" width="500px" >
       <h3>Is there an easier way?</h3>
       <p>I already pointed out that the major keys of the Circle of Fifths can be derived by simply tracking the fifths, increasing sharps, and decreasing flats, and you can derive the minor keys in the same way, but what about the relationships between the major and minor keys? Is there an easy way to recall the minor keys by only memorizing the major keys? I have a poor memory, and I'd like some system that will allow me to remember the relative minors without having to think about the creating of the Circle every time.</p>
       <p>For example, if I know that F has one flat, I'd like to know what minor key also has one flat. I could do this by rote memory, but I tend to think of it like this:</p>
