--- a/html/reviews/software/camel-crusher.html
+++ b/html/reviews/software/camel-crusher.html
@@ -1,7 +1,19 @@
 <div>
   <h4>Camel Crusher (Free Plugin)</h4>
-  <img src="/Users/db/code/butternotes/img/reviews/software/camel-crusher.png">
-  <p>The Camel Crusher is legendary, finding it's way on a long
+  <img src="https://items.sfo2.cdn.digitaloceanspaces.com/reviews/plugins/camel-crusher.png" >
+  <p>The CamelCrusher is legendary, finding it's way on a long
     list of professionally-produced albums.</p>
-  <p>While this is generally </p>
+  <p>CamelCrusher is the minimized version of CamelPhat. Both plugins were
+    created by the now-defunct Camel Audio.</p>
+  <p>CamelCrusher is predominantly used to add a little or a lot
+    of distortion to your tracks. It comes with a variety of presets
+    like "American Crunch," "Bass Maker," and "Tube Warmth." These
+    presets could give one the impression that CamelCrusher attempts
+    to be an amp sim. In my attempts to use it as an amp or cab sim, this
+    plugin didn't do very well.</p>
+  <p>What it does do is give a nice boost of energy or filth to your tracks.
+    It can also serve as a fine glue compressor for a group of tracks.<p>
+  <p>CamelCrusher installers can be found on various parts of the internet
+    for free. I'm not going to link to any particular site. Just be
+    careful with any installer you run on your computer.</p>
 </div>
