--- a/node/public/index.html
+++ b/node/public/index.html
@@ -11,6 +11,18 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155026571-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-155026571-2');
+    </script>
+
+    <!-- google ads -->
+    <script data-ad-client="ca-pub-9497253845069586" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
 
   <body>
