--- a/html/on-programming/chords-one.html
+++ b/html/on-programming/chords-one.html
@@ -14,7 +14,7 @@
 
   <body>
 
-    <div class="large-9 columns">
+    <div>
       <h5>Music Theory for (Non)Musicians and (Non)Programmers</h5>
       <h3>Building Chords, Part One</h3>
       <p>In Circle of Fifths, Part Two, I made the argument that the Circle is a good starting point in understanding how chords are created and structured. This part will serve as a brief overview of how this can be done. Unfortunately, I can't show the real beauty of chords without getting into how to read music notation. I'll begin covering this in the next section, so this section will serve as a launching pad for further ideas.</p>
