--- a/html/on-programming/cof-one.html
+++ b/html/on-programming/cof-one.html
@@ -14,9 +14,7 @@
 
   <body>
 
-
-
-    <div class="large-9 columns">
+    <div>
       <h5>Music Theory for (Non)Musicians and (Non)Programmers</h5>
       <h3>The Circle of Fifths, Part One</h3>
       <p>
