--- a/html/on-programming/cof-two.html
+++ b/html/on-programming/cof-two.html
@@ -14,7 +14,7 @@
 
   <body>
 
-    <div class="large-9 columns">
+    <div>
       <h5>Music Theory for (Non)Musicians and (Non)Programmers</h5>
       <h3>The Circle of Fifths, Part Two</h3>
       <p> In this article, we are going to derive the minor scales and keys of the Circle of Fifths. To do so, we are going to take a few short-cuts so that this doesn't become a copy/paste article and we can start to explore the relationships between the major and minor scales. I am assuming you read Circle of Fifths, Part One. If you have not read it, please do so, lest you become lost.</p>
